--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,4 +1,6 @@
-
+.login-page {
+    height: auto;
+}
 
 .title {
     text-align: center;
@@ -6,15 +8,18 @@
 }
 
 .login-form {
-
     margin-top: 50px;
    margin-left: auto;
     margin-right: auto;
     padding: 15px;
     width: 400px;
-    height: 400px;
+    height: 500px;
     border: 1px solid black;
     border-radius: 5px;
+}
+
+.form-control {
+    margin-top: 10px;
 }
 
 .form-group {
@@ -22,9 +27,10 @@
     margin-bottom: 20px;
     outline: none;
 
+
 }
 .btn-login.btn{
-margin-left: 30%;
+margin-left: 32%;
     width: 150px;
 }
 
@@ -38,4 +44,35 @@ margin-left: 30%;
     color: tomato;
     margin-left: 10px;
 }
+
+.link-signup {
+    display: inline-block;
+    margin-left: 10px;
+    color: black;
+    font-weight: 400;
+    font-size: 18px;
+
+}
+
+.user-icon {
+    margin-top: 10px;
+    padding: 0;
+    text-align: center;
+    align-items: center;
+    margin-left: 10px;
+
+}
+
+.register-box {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: center;
+
+
+}
+
+
+
 
