--- a/src/components/todos/Todos.css
+++ b/src/components/todos/Todos.css
@@ -40,14 +40,14 @@
     background-color: #ffffff;
 }
 
-.editor-btn {
-    width: 100px;
-    height: 30px;
-    margin-left: 10px;
-    border: 2px solid rgb(22, 106, 197);
-    border-radius: 3px;
-    background-color:  rgb(22, 106, 197);
-}
+/*.todo-btn {*/
+/*    width: 100px;*/
+/*    height: 30px;*/
+/*    margin-left: 10px;*/
+/*    border: 2px solid rgb(22, 106, 197);*/
+/*    border-radius: 3px;*/
+/*    background-color:  rgb(22, 106, 197);*/
+/*}*/
 
 .todoList {
     width: 700px;
