--- a/src/components/todos/Todos.css
+++ b/src/components/todos/Todos.css
@@ -8,7 +8,7 @@
     transform: translate(-50%);
     background: #fff;
     border-radius: 18px;
-    border: 1px solid rgb(22, 106, 197);
+    border: 2px solid rgb(22, 106, 197);
 
 }
 .title {
@@ -40,14 +40,14 @@
     background-color: #ffffff;
 }
 
-/*.todo-btn {*/
-/*    width: 100px;*/
-/*    height: 30px;*/
-/*    margin-left: 10px;*/
-/*    border: 2px solid rgb(22, 106, 197);*/
-/*    border-radius: 3px;*/
-/*    background-color:  rgb(22, 106, 197);*/
-/*}*/
+.todoList-btn {
+    margin-left: 30px;
+    width: 100px;
+    height: 30px;
+    border: 2px solid rgb(22, 106, 197);
+    border-radius: 3px;
+    background-color:  rgb(22, 106, 197);
+}
 
 .todoList {
     width: 700px;
@@ -56,28 +56,30 @@
     flex-direction: column;
     justify-content: center;
     padding: 0;
-
-
+}
+.contentList-box{
+    display: flex;
+    flex-direction: row;
+    width: 435px;
 }
 
 .todoList-item {
-    justify-content: space-between;
     display: flex;
     flex-direction: row;
     align-items: center;
     border: 1px solid rgb(22, 106, 197);
     border-radius: 5px;
     text-align: center;
-    width: 400px;
-    height: 50px;
-    margin-bottom: 30px;
-
-
+    margin:  23px;
+    width: 550px;
+    height: 70px;
 }
 
 .todo-text{
     color: rgb(22, 106, 197);
     font-weight: 400;
+    text-align: center;
+    margin-right: 70px;
 }
 
 .todo-btn {
@@ -87,4 +89,7 @@
     border-radius: 2px;
     border: 2px solid rgb(22, 106, 197);
     background-color: rgb(22, 106, 197);
+}
+.todo-checkbox{
+
 }
