--- a/src/components/register/Registration.css
+++ b/src/components/register/Registration.css
@@ -28,6 +28,10 @@
     margin-left: 30%;
     width: 150px;
     margin-top: 20px;
+    background-color: rgb(22, 106, 197);
+}
+.btn-signup.btn:hover{
+    background-color: rgb(22, 106, 197);
 }
 
 .error-log {
