--- a/src/components/todos/Todos.css
+++ b/src/components/todos/Todos.css
@@ -13,6 +13,7 @@
 }
 .title {
     text-align: center;
+    color: rgb(22, 106, 197);
 }
 
 
@@ -57,6 +58,7 @@
     justify-content: center;
     padding: 0;
 }
+
 .contentList-box{
     display: flex;
     flex-direction: row;
@@ -77,9 +79,11 @@
 
 .todo-text{
     color: rgb(22, 106, 197);
-    font-weight: 400;
+    font-weight: 500;
     text-align: center;
     margin-right: 70px;
+    font-size: 20px;
+
 }
 
 .todo-btn {
