--- a/src/components/todos/Todos.css
+++ b/src/components/todos/Todos.css
@@ -8,12 +8,11 @@
     transform: translate(-50%);
     background: #fff;
     border-radius: 18px;
-    border: 2px solid rgb(22, 106, 197);
+    border: 1px solid rgb(22, 106, 197);
 
 }
 .title {
     text-align: center;
-    color: rgb(22, 106, 197);
 }
 
 
@@ -41,10 +40,10 @@
     background-color: #ffffff;
 }
 
-.todoList-btn {
-    margin-left: 30px;
+.editor-btn {
     width: 100px;
     height: 30px;
+    margin-left: 10px;
     border: 2px solid rgb(22, 106, 197);
     border-radius: 3px;
     background-color:  rgb(22, 106, 197);
@@ -57,33 +56,28 @@
     flex-direction: column;
     justify-content: center;
     padding: 0;
-}
 
-.contentList-box{
-    display: flex;
-    flex-direction: row;
-    width: 435px;
+
 }
 
 .todoList-item {
+    justify-content: space-between;
     display: flex;
     flex-direction: row;
     align-items: center;
     border: 1px solid rgb(22, 106, 197);
     border-radius: 5px;
     text-align: center;
-    margin:  23px;
-    width: 550px;
-    height: 70px;
+    width: 400px;
+    height: 50px;
+    margin-bottom: 30px;
+
+
 }
 
 .todo-text{
     color: rgb(22, 106, 197);
-    font-weight: 500;
-    text-align: center;
-    margin-right: 70px;
-    font-size: 20px;
-
+    font-weight: 400;
 }
 
 .todo-btn {
@@ -93,7 +87,4 @@
     border-radius: 2px;
     border: 2px solid rgb(22, 106, 197);
     background-color: rgb(22, 106, 197);
-}
-.todo-checkbox{
-
 }
