--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,7 +1,3 @@
-/*.login-page {*/
-/*    height: 800px;*/
-/*    width: 800px;*/
-/*}*/
 
 .title {
     text-align: center;
@@ -13,8 +9,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: 15px;
-    width: 400px;
-    height: 500px;
+    max-width: 400px;
     border: 1px solid black;
     border-radius: 5px;
 }
