--- a/src/components/register/Registration.css
+++ b/src/components/register/Registration.css
@@ -12,8 +12,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: 15px;
-    width: 500px;
-    height: 700px;
+    max-width: 500px;
     border: 1px solid black;
     border-radius: 5px;
 }
