--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -8,7 +8,7 @@
 }
 
 .navLink {
-  margin-right: 60px;
+    margin-right: 60px;
     margin-left: 30px;
     color: white;
     font-size: 20px;
@@ -22,6 +22,7 @@
 
 
 .tool-bar {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: flex-end;
