--- a/src/components/register/Registration.css
+++ b/src/components/register/Registration.css
@@ -3,9 +3,9 @@
     font-size: 40px;
     margin-bottom: 10px;
 }
-.register-label {
+.register-label.register{
     padding: 0;
-    margin: 0;
+    margin-bottom: 5px;
 }
 .register-form {
     margin-top: 30px;
@@ -16,6 +16,7 @@
     border: 1px solid black;
     border-radius: 5px;
 }
+
 
 .form-group {
     padding: 10px;
