--- a/src/components/todos/Todos.css
+++ b/src/components/todos/Todos.css
@@ -37,7 +37,7 @@
 }
 
 .todoList-btn.button {
-
+    margin-right: 10px;
     height: 30px;
     border: 2px solid rgb(22, 106, 197);
     border-radius: 3px;
@@ -109,7 +109,6 @@
     border-radius: 2px;
     border: 2px solid rgb(22, 106, 197);
     background-color: rgb(22, 106, 197);
-
 }
 
 
