--- a/src/components/todos/Todos.css
+++ b/src/components/todos/Todos.css
@@ -22,10 +22,11 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    /*align-items: center;*/
-    /*justify-content: space-around;*/
 
-
+}
+.contentList-box{
+    display:flex;
+    flex-direction: row;
 }
 
 .todoList-input {
@@ -36,12 +37,8 @@
 }
 
 .todoList-btn.button {
-<<<<<<< HEAD
     margin-right: 10px;
-=======
->>>>>>> 02af9d7176607e8623e632bf2b56e06f9d5e7f09
     height: 30px;
-    margin-left: 10px;
     border: 2px solid rgb(22, 106, 197);
     border-radius: 3px;
     background-color:  rgb(22, 106, 197);
@@ -69,10 +66,11 @@
     border: 1px solid rgb(22, 106, 197);
     border-radius: 5px;
     text-align: center;
-
-    margin-bottom:  20px;
+    margin-bottom: 20px;
     max-width: 700px;
     height: 70px;
+}
+
 
 .todo-text{
     color: rgb(22, 106, 197);
