--- a/src/components/weatherWidget/WeatherWidget.css
+++ b/src/components/weatherWidget/WeatherWidget.css
@@ -1,27 +1,91 @@
 p {
     font-size: 1.6rem;
+    margin: 0;
 }
 
 h1 {
-    font-size: 6rem;
+    font-size: 4rem;
+    margin: 0;
 }
 
 .weather-container {
-    width: 100px;
-    height: 100vh;
+    max-width: 500px;
+    height: 400px;
     position: relative;
     background-color: rgba(0,0,0,0.3);
     color: white;
-
+    padding: 15px;
+    margin: 30px auto;
+    border-radius: 30px;
 }
 
 .weather-container:before {
     content: '';
-    background: url('public/bcg.jpg');
+    background: url('/public/bcg.jpg') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
     top:0;
     left:0;
     z-index: -1;
+    border-radius: 30px;
+}
+
+.weather-container input {
+    padding: .7rem 1.5rem;
+    font-size: 1.2rem;
+    border-radius: 25px;
+    border: 1px solid rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.1);
+    color: #f8f8f8;
+}
+
+::placeholder {
+    color: #f8f8f8;
+}
+
+.weather-box {
+    max-width: 700px;
+    height: 300px;
+    margin: auto;
+    position: relative;
+    top: 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.weather-container .top {
+    width: 100%;
+    margin: 1rem auto;
+}
+
+.weather-container .description {
+    position: relative;
+    right: -90%;
+    transform-origin: 0 0;
+    transform: rotate(269deg);
+}
+
+.weather-container .bottom {
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    max-width: 100%;
+    margin: 1rem auto;
+    padding: 1rem;
+    border-radius: 12px;
+    background-color: rgba(255,255,255,0.2);
+
+}
+.about {
+    margin-right: 20px;
+}
+.feels {
+    margin-left: 20px;
+}
+
+.bold {
+    font-weight: 700;
+    margin-bottom: 15px;
 }
