--- a/src/components/weatherWidget/WeatherWidget.css
+++ b/src/components/weatherWidget/WeatherWidget.css
@@ -21,7 +21,7 @@ h1 {
 
 .weather-container:before {
     content: '';
-    background: url('/public/bcg.jpg') no-repeat center center/cover;
+    background: url('/public/image/bcg-img.jpeg') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
@@ -88,4 +88,20 @@ h1 {
 .bold {
     font-weight: 700;
     margin-bottom: 15px;
+}
+.current-location-btn {
+    width: 230px;
+    padding: .7rem 1.5rem;
+    font-size: 1.2rem;
+    border-radius: 25px;
+    border: 1px solid rgba(255, 255, 255, 0.8);
+    background: rgba(255, 255, 255, 0.1);
+    color: #f8f8f8;
+    margin-left: 10px;
+}
+
+@media screen {
+    .current-location-btn {
+        margin-top: 10px;
+    }
 }
