--- a/src/components/weatherWidget/WeatherWidget.css
+++ b/src/components/weatherWidget/WeatherWidget.css
@@ -21,7 +21,7 @@ h1 {
 
 .weather-container:before {
     content: '';
-    background: url('/public/image/bcg-img.jpeg') no-repeat center center/cover;
+    background: url('/public/image/clouds-sky.jpg') no-repeat center center/cover;
     position: absolute;
     width: 100%;
     height: 100%;
